kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-dep
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapi-dep-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: webapi-dep-pod
    spec:
      nodeSelector:
        homework: "true"
      containers:
        - name: webapi
          image: inmyminde/k8s:hw3
          resources:
            limits:
              memory: "128Mi"
              cpu: "300m"
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "rm", "/homework/index.html"]
          ports:
            - name: pod-port
              containerPort: 8000
          volumeMounts:
            - name: base-vol
              mountPath: /homework
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: base-vol
          emptyDir: {}
